# autonomous-go2-inspection

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
apps/go2-autonomy/: README.md  wendy.json
apps/go2-autonomy/autonomy/: .dockerignore  Dockerfile  entrypoint.sh  wendy.json
apps/go2-autonomy/autonomy/maps/: npz_to_map.py
apps/go2-autonomy/autonomy/ros2_ws/src/go2_bringup/: CMakeLists.txt  package.xml
apps/go2-autonomy/autonomy/ros2_ws/src/go2_bringup/config/: camera_generic_720p.yaml  nav2_params_rtab.yaml
apps/go2-autonomy/autonomy/ros2_ws/src/go2_bringup/launch/: mission_control.launch.py  nav2.launch.py  real_bringup.launch.py
apps/go2-autonomy/autonomy/ros2_ws/src/go2_bringup/rviz/: rtabmap.rviz
apps/go2-autonomy/autonomy/ros2_ws/src/go2_description/: CMakeLists.txt
apps/go2-autonomy/autonomy/ros2_ws/src/go2_description/xacro/: gazebo_gz.xacro  leg.xacro  robot_gz.xacro
apps/go2-autonomy/autonomy/ros2_ws/src/go2_exploration/src/: self_filter.cpp
apps/go2-autonomy/autonomy/ros2_ws/src/go2_inspection/: README.md  package.xml  setup.py
apps/go2-autonomy/autonomy/ros2_ws/src/go2_inspection/go2_inspection/: gauge_inspector.py  inspection_mission.py  mcp_gauge_server.py  mission_control_server.py  panorama_segmenter.py  yoloe_segmenter.py  zone_sweeper.py  zone_wall_follower.py
apps/go2-autonomy/autonomy/ros2_ws/src/go2_inspection_interfaces/: CMakeLists.txt  package.xml
apps/go2-autonomy/autonomy/ros2_ws/src/go2_inspection_interfaces/srv/: ZoneTask.srv
apps/go2-autonomy/autonomy/ros2_ws/src/go2_perception/: package.xml
apps/go2-autonomy/docs/: SIM-TO-REAL.md
apps/go2-ros2-bridge-only/: README.md  wendy.json
apps/go2-ros2-bridge-only/bridge/: .dockerignore  Dockerfile  entrypoint.sh
apps/go2-ros2-bridge-only/bridge/ros2_ws/src/go2_bridge/: package.xml  setup.py
apps/go2-ros2-bridge-only/bridge/ros2_ws/src/go2_bridge/config/: expected_topics.yaml
apps/go2-ros2-bridge-only/bridge/ros2_ws/src/go2_bridge/go2_bridge/: __init__.py  camera_bridge.py  cmd_vel_bridge.py  domains.py  joint_state_bridge.py  odom_tf_bridge.py  sensor_bridge.py  topic_monitor.py
apps/go2-ros2-bridge-only/bridge/ros2_ws/src/go2_bridge/launch/: bridge.launch.py
apps/go2-ros2-bridge-only/docs/: ARCHITECTURE.md  SIM_TO_WENDYOS_GUIDE.md  TRANSFER.md
apps/go2-ros2-bridge-only/scripts/: check.sh
go2-sim/: CHANGELOG.md  PROGRESS-LOG.md  README.md  RUN-SIM.md  run_demo.sh  run_mcp_sim.sh  stop_demo.sh
go2-sim/docs/: 00-REFERENCE-REPOS.md  01-DESIGN-DECISIONS.md  02-ROADMAP.md  03-INSPECTION-ROADMAP.md  04-SERVICE-LAYER.md  05-CONVERGENCE.md  06-INSPECTION-APPROACH.md  07-VISUALIZATION-AND-DEMO.md  08-RELIABILITY-HARDENING.md  09-DETECTION-ROBUSTNESS.md
go2-sim/go2_ws/: README.md
go2-sim/go2_ws/src/.go2_description_lean_backup/: CMakeLists.txt  package.xml
go2-sim/go2_ws/src/.go2_description_lean_backup/urdf/: go2.urdf
go2-sim/go2_ws/src/champ_base/config/ekf/: base_to_footprint.yaml  footprint_to_odom.yaml
go2-sim/go2_ws/src/champ_base/src/: quadruped_controller.cpp
go2-sim/go2_ws/src/champ_bringup/launch/: bringup.launch.py
go2-sim/go2_ws/src/go2_bringup/: package.xml
go2-sim/go2_ws/src/go2_bringup/config/: explore_lite.yaml  nav2_params.yaml  nav2_params_rtab.yaml  pointcloud_to_laserscan.yaml  ros_gz_bridge.yaml  ros_gz_bridge_champ.yaml  slam_toolbox.yaml  twist_mux.yaml
go2-sim/go2_ws/src/go2_bringup/launch/: demo.launch.py  explore.launch.py  explore_lite.launch.py  go2_champ.launch.py  inspection_nav.launch.py  mission.launch.py  mission_control.launch.py  nav2.launch.py  octomap.launch.py  rtabmap.launch.py  rtabmap_slam.launch.py  sim.launch.py  sim_mapping.launch.py  slam.launch.py
go2-sim/go2_ws/src/go2_bringup/rviz/: explore.rviz  inspection.rviz
go2-sim/go2_ws/src/go2_config/config/gait/: gait.yaml
go2-sim/go2_ws/src/go2_config/config/ros_control/: ros_control.yaml
go2-sim/go2_ws/src/go2_config/launch/: gazebo_velodyne.launch.py
go2-sim/go2_ws/src/go2_description/xacro/: gazebo_gz.xacro
go2-sim/go2_ws/src/go2_exploration/: CMakeLists.txt  package.xml
go2-sim/go2_ws/src/go2_exploration/src/: frontier_explorer.cpp
go2-sim/go2_ws/src/go2_inspection/: README.md  package.xml  setup.cfg  setup.py
go2-sim/go2_ws/src/go2_inspection/go2_inspection/: benchmark.py  detect_utils.py  gauge_inspector.py  inspect_planner.py  inspection_markers.py  inspection_mission.py  map_grab.py  mcp_gauge_server.py  mcp_mission_server.py  mission_control_server.py  mission_fsm.py  npz_to_map.py  report_utils.py  yoloe_segmenter.py  yoloe_tuner.py  zone_inspector.py  zone_sweeper.py
go2-sim/go2_ws/src/go2_inspection/test/: test_benchmark.py  test_detect_utils.py  test_gauge_logic.py  test_inspect_planner.py  test_mission_fsm.py
go2-sim/go2_ws/src/go2_inspection_interfaces/: package.xml
go2-sim/go2_ws/src/go2_perception/: package.xml  setup.py
go2-sim/go2_ws/src/go2_perception/go2_perception/: lidar_colorize.py
go2-sim/go2_ws/src/go2_worlds/: CMakeLists.txt  package.xml
go2-sim/go2_ws/src/go2_worlds/scripts/: gen_gauge_world.py  gen_gauges.py  gen_inspection_arena.py  gen_inspection_world.py  gen_map.py  gen_maze_world.py
go2-sim/go2_ws/src/go2_worlds/worlds/: facility.sdf  facility_gauges.sdf  facility_inspection.sdf  inspection_arena.sdf  lab.sdf  maze.sdf  zones.yaml
go2-sim/go2_ws/src/go2_worlds/worlds/gauge_tex/: gauges_groundtruth.json
go2-sim/go2_ws/src/go2_worlds/worlds/inspection_tex/: inspection_groundtruth.json
go2-sim/go2_ws/src/go2_worlds/worlds/maze_tex/: maze_groundtruth.json
go2-sim/go2_ws/src/go2_zones/: package.xml  setup.cfg  setup.py
go2-sim/go2_ws/src/go2_zones/go2_zones/: zone_segmenter.py
go2-sim/go2_ws/src/go2_zones/maps/: facility_gauges_zones.yaml
go2-sim/go2_ws/src/go2_zones/test/: test_zone_segmenter.py
go2-sim/maps/: facility_inspection_map.pgm  facility_inspection_map.yaml  facility_inspection_zones.yaml  map_grab.py  maze_map.pgm  maze_map.yaml  maze_zones.yaml  my_map.pgm  my_map.yaml  npz_to_map.py
go2-sim/scripts/: install_deps.sh
