<?xml version="1.0"?>
<package format="3">
  <name>go2_description</name>
  <version>0.1.0</version>
  <description>Unitree Go2 URDF/SDF for Gazebo Harmonic (LiDAR+IMU+cam)</description>
  <maintainer email="manasreddyarumalla@gmail.com">team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
