<?xml version="1.0"?>
<package format="3">
  <name>go2_exploration</name>
  <version>0.1.0</version>
  <description>Frontier-based autonomous exploration (Nav2 NavigateToPose)</description>
  <maintainer email="manasreddyarumalla@gmail.com">Manas Arumalla</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_msgs</depend>
  <depend>std_srvs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
