<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_inspection</name>
  <version>0.1.0</version>
  <description>Autonomous facility inspection for the Go2: zone_inspector (viewpoint + 360-degree spin +
  depth-projected 3D YOLOE detection) + Claude gauge reading + the mission_control service layer + MCP server.</description>
  <maintainer email="manasreddyarumalla@gmail.com">EE26 team</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>go2_inspection_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
