<?xml version="1.0"?>
<package format="3">
  <name>go2_worlds</name>
  <version>0.1.0</version>
  <description>Realistic Gazebo Harmonic worlds for inspection/exploration</description>
  <maintainer email="manasreddyarumalla@gmail.com">team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
