<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_inspection_interfaces</name>
  <version>0.1.0</version>
  <description>Service definitions for the Go2 inspection mission-control service layer (the trigger
  surface that the WendyOS/MCP tools will later call). One uniform ZoneTask service.</description>
  <maintainer email="manasreddyarumalla@gmail.com">EE26 team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
